--- a/yinghuayiyouu.html
+++ b/yinghuayiyouu.html
@@ -10,8 +10,8 @@
     <link href="css/yinghuayiyou.css "rel="stylesheet">
 </head>
 <body data-spy="scroll" data-target="#nav-example">
-    <div class="bigblackfix">
-        <div class="blackfix">
+    <div class="top">
+        <div class="blacktop">
             <ul>
                 <li>请登录</li>
                 <li>|</li>
@@ -32,14 +32,14 @@
             </div>
             <div class="collapse navbar-collapse" id="bs-1">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="#ban">首页</a></li>
-                    <li><a href="#route">热门路线</a></li>
+                    <li class="active"><a href="#Broadcast">首页</a></li>
+                    <li><a href="#Popular">热门路线</a></li>
                     <li><a href="#visa">签证推荐</a></li>
-                    <li><a href="#vision">使命愿景</a></li>
+                    <li><a href="#view">使命愿景</a></li>
                 </ul>
             </div>
         </nav>  
-        <div id="ban" class="carousel slide" data-ride="carousel">
+        <div id="Broadcast" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner" >
                 <div class="item active">
                     <img alt="First slide" src="img/banner.jpg" >
@@ -73,19 +73,214 @@
                     </button>
                 </div>
             </div>
-            <a class="left carousel-control" href="#ban" data-slide="prev">
+            <a class="left carousel-control" href="#Broadcast" data-slide="prev">
             <span class="glyphicon glyphicon-chevron-left"></span>
             </a>
-            <a class="right carousel-control" href="#ban" data-slide="next">
+            <a class="right carousel-control" href="#Broadcast" data-slide="next">
             <span class="glyphicon glyphicon-chevron-right"></span>
             </a>
         </div> 
         <div class="context">
-            <div id="route" class="container-fluid" style="height: 900px; background-color:khaki">
+            <div class="featurea" id="fea">
+                <div class="feaa">
+                    <img src="img/carH.png">
+                </div>
+                <div class="feab">
+                    <h3>机场接送 省心省力</h3>
+                    <p>提供上海、江苏、无锡各市</p>
+                    <p>往返机场、码头接送服务，更有包车服务</p>
+                </div>
+                <div class="feac">
+                    <a>查看详情</a>
+                </div>
             </div>
-            <div id="visa"style="height: 500px; background-color:#000"></div>
-            <div id="vision"style="height: 400px; background-color:red"></div>
-        </div>    
+            <div class="featureb" id="feb">
+                <div class="feba">
+                    <div class="febaa">
+                        <img src="img/car.png">
+                        <p>车辆接送</p>
+                    </div>
+                    <div class="febab">
+                        <p><a>查看详情</a></p>
+                    </div>
+                </div>
+                <div class="febb">
+                    <div class="febba">
+                        <p>机场接送 省钱省心</p>
+                    </div>
+                    <div class="febbb">
+                        <p>提供上海、江苏、无锡各市</p>
+                        <p>往返机场、码头接送服务，更有包车服务</p>
+                    </div>
+                </div>
+            </div>
+            <div id="Popular" class="container">
+                <div id="rouap">
+                    <h2>热 门 线 路</h2>
+                    <h5>Popular tourist routes</h5>
+                </div>
+                <div id="rouam">
+                    <h4><span>|</span>热门线路</h4>
+                </div>
+                <div class="row" id="roub">
+                    <div class="col-md-6">
+                        <div class="rouba">
+                            <img src="img/hot1.jpg" alt="">
+                            <div id="roubap">
+                                <h4>海南三亚5天4晚，纯玩、4晚红树林独家王国</h4>
+                                <h4>￥<span>2580</span>/人起</h4>
+                            </div>
+                            <div id="roubam">
+                                <h5>海南三亚5天4晚</h5>
+                                <h5 style="width: 40%; float: right; line-height: 400%;">￥<span>2580</span>/人起</h5>
+                                <h5>纯玩、4晚红树林独家王国</h5>
+                            </div>
+                        </div>
+                        <div class="rouba">
+                            <img src="img/hot2.jpg" alt="">
+                            <div id="roubap">
+                                <h4>海南三亚5天4晚，纯玩、4晚红树林独家王国</h4>
+                                <h4>￥<span>2580</span>/人起</h4>
+                            </div>
+                            <div id="roubam">
+                                <h5>海南三亚5天4晚</h5>
+                                <h5 style="width: 40%; float: right; line-height: 400%;">￥<span>2580</span>/人起</h5>
+                                <h5>纯玩、4晚红树林独家王国</h5>
+                            </div>
+                            
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="roubb" style="background: url(img/hot3.jpg) no-repeat;">
+                            <div>
+                                <h4>曼谷+芭提雅 国际五星， 赠送2220大礼包 绝无自费</h4>
+                                <h4>￥<span>2799</span>/人起</h4>
+                            </div>
+                        </div>
+                        <div class="roubb" style="background: url(img/hot4.jpg) no-repeat;">
+                            <div>
+                                <h4>日本本州游 樱花、寿司、温泉、美食</h4>
+                                <h4>￥<span>5399</span>/人起</h4>
+                            </div>
+                        </div>
+                        <div class="roubb" style="background: url(img/hot5.jpg) no-repeat;">
+                            <div>
+                                <h4>斯里兰卡7天6晚全景游 保证入住2晚香格里拉</h4>
+                                <h4>￥<span>7999</span>/人起</h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div id="roubtn">
+                    查看更多 >
+                </div>
+            </div>
+            <div id="visa" class="container">
+                <div id="rouap">
+                    <h2>签 证 推 荐</h2>
+                    <h5>Visa recommendation</h5>
+                    <ul>
+                        <li>热门：</li>
+                        <li>日本</li>
+                        <li>马来西亚</li>
+                        <li>美国</li>
+                        <li>意大利</li>
+                        <li>加拿大</li>
+                        <li>新加坡</li>
+                    </ul>
+                </div>
+                <div id="rouam">
+                    <h4><span>|</span>签证推荐</h4>
+                </div>
+                <div class="row">
+                    <div class="col-md-8">
+                        <div class="col-md-6 col-xs-5">
+                            <div class="visaba">
+                                <img src="img/visa1.jpg">
+                                <div>
+                                    <a>日本旅游签证</a>
+                                    <a>￥<span>420</span>/人</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6 col-xs-7">
+                            <div class="visabb">
+                                <img src="img/visa2.jpg">
+                                <div>
+                                    <a>新加坡旅游签证</a>
+                                    <a>￥<span>370</span>/人</a>
+                                </div>
+                            </div>
+                            <div class="visabb">
+                                <img src="img/visa4.jpg">
+                                <div>
+                                    <a>申根旅游签证</a>
+                                    <a>￥<span>999</span>/人</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="visabb">
+                            <img src="img/visa3.jpg">
+                            <div>
+                                <a>马来西亚旅游签证</a>
+                                <a>￥<span>450</span>/人</a>
+                            </div>
+                        </div>
+                        <div class="visabb">
+                            <img src="img/visa5.jpg">
+                            <div>
+                                <a>美国旅游签证</a>
+                                <a>￥<span>1380</span>/人</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div id="roubtn">
+                    查看更多 >
+                </div>
+            </div>
+            <img id="Bban" src="img/Bbanner.jpg">
+            <div id="view" class="container">
+                <div id="rouap">
+                    <h2>使命与愿景</h2>
+                    <h5>让旅游回归本质，体验纯粹旅游</h5>
+                </div>
+                <div id="rouam">
+                    <h4><span>|</span>热门线路</h4>
+                </div>
+                <div id="viewa" class="row">
+                    <div class="col-md-5 col-xs-12">
+                        <img src="img/mission1.jpg" id="t2">
+                    </div>
+                    <div class="col-md-7 col-xs-12">
+                        <h2 id="viahp">服务理念及优势</h2>
+                        <h4 id="viahm">--服务理念--</h4>
+                        <p>“英华逸游”通过重新打造旅游全程中的产品线路设计、出行交通方案、陪游向导服务、增值关怀项目等，为客户提供高品质的旅游体验。英华逸游在泰国、欧洲、等多个国家拥有丰富的旅游资源，同时致力于给用户提供性价比高的产品和服务。</p>
+                    </div>
+                </div>
+                <img id="viewb" src="img/mission2.jpg">
+                <div id="viewc" class="row">
+                        <h4 id="viahm">--服务理念--</h4>
+                        <div id="viewcbig">
+                        <div id="viewca" class="col-md-4 col-md-offset-1 col-xs-12">
+                            <div style="background-image:url(img/rorate.png),url(img/icon1.png)"><p>品质行程</p></div>
+                            <img src="img/icon11.png">
+                            <p>旅游达人精心设计、基于口碑反复打磨，全网最好，敢和任何产品比</p>
+                        </div>
+                        <div id="viewca" class="col-md-3 col-xs-12">
+                            <div style="background-image:url(img/rorate.png),url(img/icon2.png)"><p>品质消费</p></div>
+                            <img src="img/icon22.png">
+                            <p>不推自费，不进垃圾购物店和伪景点</p></div>
+                        <div id="viewca" class="col-md-4 col-xs-12">
+                            <div style="background-image:url(img/rorate.png),url(img/icon3.png)"><p>品质小团</p></div>
+                            <img src="img/icon33.png">
+                            <p>独立成团不散拼，只跟亲朋好友一起玩，每天发团</p></div>
+                    </div>
+                </div>
+            </div>
+        </div
     </div>
     <div class="bottomline">
         <div class="bottomb">
